--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
 Werkzeug==2.2.2
+notebook==6.5.2
 numpy>=1.9.2
 scipy>=0.15.1
 scikit-learn>=0.18
