--- a/requirements.txt
+++ b/requirements.txt
@@ -6,8 +6,31 @@ Jinja2==3.1.2
 MarkupSafe==2.1.1
 Werkzeug==2.2.2
 notebook==6.5.2
+opencv-python
+certifi==2020.6.20
+chardet==3.0.4
+click==7.1.2 
+cmake==3.18.2.post1
+decorator==4.4.2
+dlib==19.18.0
+face-recognition==1.3.0
+face-recognition-models==0.3.0
+idna==2.10
+imageio==2.9.0
+imageio-ffmpeg==0.4.2
+moviepy==1.0.3
+opencv-python==4.4.0.46
+Pillow==8.0.1
+proglog==0.1.9
+requests==2.24.0
+tqdm==4.51.0
+urllib3==1.25.11
+wincertstore==0.2
+Flask-Session==0.4.0
+seaborn==0.12.1
+matplotlib==3.6.1
 numpy>=1.9.2
 scipy>=0.15.1
-scikit-learn>=0.18
+scikit-learn==1.0.2
 matplotlib>=1.4.3
 pandas>=0.19
