--- a/requirements.txt
+++ b/requirements.txt
@@ -31,6 +31,6 @@ seaborn==0.12.1
 matplotlib==3.6.1
 numpy>=1.9.2
 scipy>=0.15.1
-scikit-learn==1.0.2
+scikit-learn>=0.18
 matplotlib>=1.4.3
 pandas>=0.19
